--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -13,9 +14,8 @@ header {
   justify-content: center;
 }
 .content {
-  height: 50vh; /* mock */
   width: 80vw;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 .main {
@@ -30,4 +30,22 @@ header {
 
 .sign-up {
   background: rgb(50, 115, 152);
+}
+
+.features_content {
+    /* mock */
+  height: 60vh;  
+  border: 2px solid red;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+h3 {
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 1.25rem;
+  margin-bottom: 3rem;
 }
