--- a/main.css
+++ b/main.css
@@ -4,11 +4,22 @@
   font-family: 'Roboto', sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 header {
   position: fixed;
   display: flex;
   width: 100%;
-  background: (0, 0, 0, 0);
+  padding: 20px 0;
+  align-items: center;
+  justify-content: space-evenly;
+  transition: 1s;
+}
+
+.logo-image {
+  height: 50px;
 }
 
 header > ul {
@@ -18,6 +29,11 @@ header > ul {
 
 ul > li {
   list-style-type: none;
+  color: white;
+  margin-left: 30px;
+}
+
+li > a {
   color: white;
 }
 
@@ -46,8 +62,8 @@ ul > li {
 }
 
 .features_content {
-    /* mock */
-  height: 60vh;  
+  /* mock */
+  height: 60vh;
   border: 2px solid red;
   margin-top: 3rem;
   margin-bottom: 3rem;
