--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ header {
 header > ul {
   display: flex;
   color: white;
+  margin-left: 150px;
 }
 
 ul > li {
@@ -33,8 +34,28 @@ ul > li {
   margin-left: 30px;
 }
 
-li > a {
+li > a,
+.language_button > a,
+.signup_button > a {
   color: white;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.language_button {
+  border: solid 2px white;
+  border-radius: 2px;
+  padding: 1px 10px;
+}
+
+.language_button > a {
+  font-size: 0.75rem;
+}
+
+.signup_button {
+  padding: 10px 40px;
+  background-color: rgb(62, 147, 199);
+  border-radius: 2px;
 }
 
 .screen {
