--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@ li > a,
 
 .features_content {
   /* mock */
-  height: 70vh;
+  height: 60vh;
   margin-top: 3rem;
   margin-bottom: 3rem;
   display: flex;
@@ -112,21 +112,21 @@ li > a,
 }
 
 .features_icon {
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
 }
 
 .features_header {
-  font-size: 2rem;
-  height: 5rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  font-size: 1.25rem;
+  height: 2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   margin-right: 100px;
   font-weight: bold;
 }
 
 .features_article {
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin-right: 80px;
   margin-top: 2rem;
   color: rgb(102, 111, 116);
@@ -155,7 +155,7 @@ li > a,
 .work_content {
   display: flex;
   justify-content: space-between;
-  height: 50vh;
+  height: 70vh;
 }
 
 .work_container {
@@ -174,6 +174,7 @@ li > a,
 .work_header{
   font-size: 1.5rem;
   margin-top: 1rem;
+  height: 2rem;;
   margin-bottom: 1rem;
   margin-right: 100px;
   font-weight: bold;
