--- a/main.css
+++ b/main.css
@@ -66,6 +66,9 @@ li > a,
 .content {
   width: 80vw;
   margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .main {
@@ -87,6 +90,12 @@ li > a,
   height: 60vh;
   margin-top: 3rem;
   margin-bottom: 3rem;
+  display: flex;
+}
+
+.why_content {
+  /* mock */
+  height: 60vh;
   display: flex;
 }
 
@@ -205,6 +214,80 @@ li > a,
 .immediate_icon {
   background: url('assets/immediate.svg') no-repeat center;
   background-size: 70% auto;
+}
+
+.title_container {
+  justify-self: center;
+  width: 100%;
+  text-align: center;
+  height: 4rem;
+  text-align: center;
+}
+
+.title_container > h3 {
+  font-size: 1.75rem;
+  text-align: center;
+  color: rgb(0, 192, 192);
+}
+
+#why_article {
+  margin-top: 2rem;
+  font-size: 1.25rem;
+}
+
+.why_container {
+  margin-top: 2rem;
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  justify-content: space-between;
+}
+
+.why_item {
+  height: 100%;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.why_icon {
+  width: 100px;
+  height: 100px;
+}
+
+.quality_icon {
+  background: url('assets/quality.svg') no-repeat center;
+  background-size: 50%;
+}
+
+.seconds_icon {
+  background: url('assets/seconds.svg') no-repeat center;
+  background-size: 50%;
+}
+
+.support_icon {
+  background: url('assets/support.svg') no-repeat center;
+  background-size: 70%;
+}
+
+.better_icon {
+  background: url('assets/better.svg') no-repeat center;
+  background-size: 50%;
+}
+
+.why_header {
+  font-size: 1.25rem;
+  margin-top: 0.5rem;
+  height: 4rem;
+  margin-bottom: 0.5rem;
+  max-width: 200px;
+}
+
+.why_description{
+  font-size: 1rem;
+  max-width: 200px;
+  color: rgb(102, 111, 116);
 }
 
 h3 {
