--- a/main.css
+++ b/main.css
@@ -330,6 +330,33 @@ li > a,
   color: rgb(102, 111, 116);
 }
 
+.prices_container {
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card_container {
+  width: 100%;
+  height: 45vh;
+  display: flex;
+  justify-content: space-between;
+  display: none;
+}
+
+.prices_card {
+  height: 100%;
+  width: 25%;
+  border: 2px solid green;
+}
+
+.prices_header {
+  font-size: 1.25rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 h3 {
   font-size: 2.5rem;
   font-weight: 600;
