--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ li > a,
 }
 .content {
   width: 80vw;
-  margin-top: 100px;
+  margin-top: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -276,7 +276,7 @@ li > a,
 }
 
 .why_container {
-  margin-top: 2rem;
+  margin-top: 120px;
   width: 100%;
   height: 30vh;
   display: flex;
@@ -320,6 +320,7 @@ li > a,
   font-size: 1.25rem;
   margin-top: 0.5rem;
   height: 4rem;
+  text-align: center;
   margin-bottom: 0.5rem;
   max-width: 200px;
 }
@@ -327,6 +328,7 @@ li > a,
 .why_description {
   font-size: 1rem;
   max-width: 200px;
+  text-align: center;
   color: rgb(102, 111, 116);
 }
 
@@ -355,6 +357,58 @@ li > a,
   font-size: 1.25rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.sign-up {
+  background: url('assets/farmer-in-field-touching-his-meat.png') no-repeat center;
+  background-size: cover;
+  background-color: rgb(62, 147, 199);
+  height: 50vh;
+}
+
+.sign-up > .content {
+  margin-top: 0;
+  justify-content: unset;
+}
+
+.sign-up > .content > h2 {
+  margin-top: 3rem;
+  color: white;
+}
+
+.signup-input {
+  width: 250px;
+  height: 2rem;
+  margin: 15px;
+  font-size: 1.25rem;
+}
+
+#signup_description, #signup_title {
+  color: white;
+  margin-bottom: 1rem;
+}
+
+#signup_title {
+  font-size: 2rem;
+}
+
+#signup_description {
+  font-size: 1.5rem;
+}
+
+.real-signup {
+  border: 0;
+  color: white;
+  background: rgb(40, 40, 40);
+  font-style: bold;
+  font-size: 1.25rem;
+}
+
+select {
+  width: 250px;
+  height: 2.5rem;
+  margin: 20px;
+  font-size: 1.5rem; 
 }
 
 h3 {
