--- a/main.css
+++ b/main.css
@@ -465,7 +465,7 @@ li > a,
 .member-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 200px;
 }
 
