--- a/mobile.css
+++ b/mobile.css
@@ -3,11 +3,15 @@
 }
 
 .main-container {
-  margin: auto 50px;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding-left: 10vw;
+  background-color: rgba(0,0,0,0.4);
 }
 
-.main-container > :not(div) {
-  text-shadow: black 2px 2px;
+#alzagro_cropler {
+  margin-top: 200px;
 }
 
 #main_description {
@@ -66,6 +70,41 @@
   margin-top: 3rem;
 }
 
+
+.why_container {
+  flex-wrap: wrap;
+  height: auto;
+  margin-bottom: 50px;
+}
+
+.why_content {
+  height: auto;
+}
+
+.why_item {
+  width: 50%;
+  height: unset;
+}
+
+.testimonial-image {
+  display: none;
+}
+
+.testimonials {
+  background: url(./assets/grain_hands.png) no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.testimonial_textbox {
+  width: 100%;
+  background-color: rgba(0,0,0,0.4);
+  padding: 40px 0;
+}
+
+.testimonials {
+  height: auto;
+}
 
 .member-container {
   display: none;
