--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ li > a,
   display: flex;
   justify-content: center;
 }
+
 .content {
   width: 80vw;
   margin-top: 60px;
@@ -138,16 +139,12 @@ li > a,
 }
 
 .features_content {
-  /* mock */
-  height: 60vh;
   margin-top: 3rem;
   margin-bottom: 3rem;
   display: flex;
 }
 
 .why_content {
-  /* mock */
-  height: 60vh;
   display: flex;
   flex-direction: column;
 }
@@ -169,9 +166,9 @@ li > a,
 
 .feature_container {
   width: 50%;
-  height: 55%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 2rem;
 }
 
 .features_icon {
@@ -206,7 +203,7 @@ li > a,
 }
 
 .infrared_icon {
-  background: url('assets/infrared.svg') no-repeat;
+  background: url('assets/infrared.svg') no-repeat center;
   background-size: 70%;
 }
 
@@ -218,7 +215,6 @@ li > a,
 .work_content {
   display: flex;
   justify-content: space-between;
-  height: 50vh;
 }
 
 .work_container {
@@ -274,7 +270,6 @@ li > a,
   justify-self: center;
   width: 100%;
   text-align: center;
-  height: 4rem;
   text-align: center;
 }
 
@@ -282,6 +277,7 @@ li > a,
   font-size: 1.75rem;
   text-align: center;
   color: rgb(0, 192, 192);
+  margin-bottom: 2rem;
 }
 
 #why_article {
@@ -292,7 +288,7 @@ li > a,
 .why_container {
   margin-top: 120px;
   width: 100%;
-  height: 30vh;
+  margin-bottom: 100px;
   display: flex;
   justify-content: space-between;
 }
@@ -394,7 +390,6 @@ li > a,
 
 .card_container {
   width: 100%;
-  height: 45vh;
   display: flex;
   justify-content: space-between;
   display: none;
@@ -570,9 +565,4 @@ h3 {
 h2 {
   font-size: 1.25rem;
   margin-bottom: 3rem;
-}
-
-
-.content > * {
-  zoom: 0.7;
 }
