--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: Blender Pro;
+  src: url("../alzagro-landing/assets/BlenderPro.ttf") format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   scroll-behavior: smooth;
@@ -105,11 +112,7 @@ li > a,
 .font,
 li > *,
 #social {
-<<<<<<< HEAD
-  font-family: Blender Pro;
-=======
   font-family: 'Blender Pro','Roboto';
->>>>>>> ca7f3a6d4f21378331818a379e98bffdb5b37dbb
   letter-spacing: 0.1rem;
 }
 
