update font route

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Blender Pro;
-  src: url("../alzagro-landing/assets/BlenderPro.ttf") format('truetype');
+  src: url("../globea.github.io/assets/BlenderPro.ttf") format('truetype');
   font-weight: bold;
   font-style: normal;
 }
