--- a/mobile.css
+++ b/mobile.css
@@ -165,3 +165,21 @@ footer {
 header {
   display: none;
 }
+
+.banner {
+  flex-direction: column;
+  height: auto;
+}
+
+#banner-text {
+  margin-right: 0;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  text-align: center;
+}
+
+.cookies-button {
+  margin: 0;
+  margin-top: 1rem;
+}
