--- a/mobile.css
+++ b/mobile.css
@@ -173,13 +173,13 @@ header {
 
 #banner-text {
   margin-right: 0;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   width: 100%;
   text-align: center;
 }
 
 .cookies-button {
   margin: 0;
-  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
