--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
 * {
   margin: 0;
   scroll-behavior: smooth;
-  font-family: "Roboto", sans-serif;
+  font-family: "Blender Pro", Roboto;
 }
 
 body {
