--- a/main.css
+++ b/main.css
@@ -531,15 +531,28 @@ li > *,
 }
 
 .member-photo {
-  background: url("") no-repeat
-    center;
   -webkit-filter: grayscale(100%);
   filter: gray;
-  background-size: contain;
   width: 320px;
   height: 270px;
   border-radius: 2px;
 }
+
+#member-photo1 {
+  background: url("") no-repeat center;
+  background-size: auto 100%;
+}
+
+#member-photo2 {
+  background: url("assets/ALFI_FF.jpg") no-repeat center;
+  background-size: auto 100%;
+}
+
+#member-photo3 {
+  background: url("assets/ZALAN_FF.jpg") no-repeat center;
+  background-size: auto 100%;
+}
+
 
 footer {
   margin: 0 20vw 0 10vw;
