--- a/main.css
+++ b/main.css
@@ -97,7 +97,7 @@ li > a,
 }
 
 .main {
-  background: url("assets/main_background.png") no-repeat center;
+  background: url("alzagro_háttérben_03.jpg") no-repeat center;
   background-size: cover;
   height: 100vh;
   display: flex;
