--- a/main.css
+++ b/main.css
@@ -44,13 +44,13 @@ header {
 
 header > ul {
   display: flex;
-  color: white;
+  color: black;
   margin-left: 150px;
 }
 
 ul > li {
   list-style-type: none;
-  color: white;
+  color: black;
   margin-left: 30px;
 }
 
@@ -64,8 +64,8 @@ li > a,
 }
 
 .language_button {
-  border: solid 2px white;
-  color: white;
+  border: solid 2px black;
+  color: black;
   border-radius: 2px;
   padding: 1px 10px;
   position: absolute;
@@ -130,7 +130,7 @@ li > *,
 #main_title,
 #main_title2,
 #main_description {
-  color: white;
+  color: black;
   margin-bottom: 10px;
   font-weight: 600;
 }
